<resources>
    <string name="app_name">ChatHub</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="preferences_menu_label">Preferences</string>
    <string name="auto_palette_preference">autoPalette</string>
    <string name="color_scheme_preference">colorScheme</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="contacts">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message_thread">MessageThreadActivity</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="deleteContact">Delete Contact</string>
    <string name="email">Email</string>
    <string name="logOut">Log Out</string>
    <string name="preferences">Preferences</string>
    <string name="inbox">Inbox</string>
    <string name="account">Account</string>
    <string name="startChat">Message</string>

</resources>
