<?xml version="1.0" encoding="utf-8"?>
<!--
    Static list of menu items. A menu tag defines a container for menu items. A group
    tag can be used to allow similar menu items to shared properties. Item tags are simply
    the menu items themselves. Nesting a menu tag inside a item tag allows you to create
    a submenu.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/groupMain"
        android:checkableBehavior="single">

        <item
            android:id="@+id/inbox"
            android:icon="@drawable/ic_inbox_black_24px"
            android:title="@string/inbox" ></item>

        <item
            android:id="@+id/contacts"
            android:icon="@drawable/ic_contacts_black_24px"
            android:title="@string/contacts" ></item>







    </group>

    <item android:title="@string/account">

        <menu>
            <item

                android:id="@+id/preferences"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/preferences" ></item>

            <item

                android:id="@+id/logOut"
                android:icon="@drawable/ic_power_settings_new_black_24px"
                android:title="@string/logOut" ></item>
        </menu>

    </item>

</menu>