<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1632c0"
        android:padding="20dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/contactImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_account_circle_black_36dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:id="@+id/contactName"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#ffffff" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/emailLabel"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="#b6b6b6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test"
            android:id="@+id/contactEmail"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="#000000" />
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startChat"
        android:id="@+id/startChat"
        android:background="@android:color/holo_green_light"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteContact"
        android:id="@+id/deleteContact"
        android:background="#ff0000"
        android:layout_gravity="center_horizontal" />


</LinearLayout>

